BusOne01/src/objects/Benefit_Design_vod__c.object
<CustomObject>
    <fields>
        <fullName>BOT_Benefit_Design_ID__c</fullName>
        <description>It is created by BusinessOne Technologies. It is used to store BOT Formulary ID.</description>
        <externalId>true</externalId>
        <label>Benefit Design ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store BOT Entity ID. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Lives_Med__c</fullName>
        <description>To store medical formulary lives</description>
        <label>Formulary Lives Med</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Name__c</fullName>
        <description>Used to store the name of Formulary</description>
        <label>Formulary Name Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Is_BOT_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created by BusinessOne technologies. This field is used to identify the record created by BOT or Veeva.</description>
        <label>Is BOT Data</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>BOT_Benefit_Design</fullName>
        <active>true</active>
        <description>It is created by BusinessOne Technologies Inc and used to store BOT Formulary records.</description>
        <label>BOT_Benefit Design</label>
    </recordTypes>
</CustomObject>